--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
-  </head>
-  <body>
-    <h1>Converter in TS</h1>
-    <input type="button" id="btnGetFile" value="Choose File" />
-  </body>
-  <script>
+    <title>Video Converter</title>
+    <style>
+        div.default
+        {
+            font-family: Consolas, monaco, monospace; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 20px;
+            white-space: pre-line;
+        }
+    </style>
+</head>
+<body>
+<h1>Video Converter</h1>
+<input type="button" id="btnGetFile" value="Choose File" />
+<div id="file-upload-filename" class="default" ></div>
+</body>
+<script>
     // You can also require other files to run in this process
     require('./dist/renderer.js')
-  </script>
+</script>
 </html>
