--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 <h1>Video Converter</h1>
 <input type="button" id="btnGetFile" value="Choose File" />
 <div id="file-upload-filename" class="default" ></div>
+Convert To:
+<select id="video_type">
+    <option value="mp4">mp4</option>
+    <option value="avi">avi</option>
+    <option value="flv">flv</option>
+</select>
+<input type="button" id="btnConvert" value="Convert" />
 </body>
 <script>
     // You can also require other files to run in this process
