--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@ Convert To:
     <option value="mp4">mp4</option>
     <option value="avi">avi</option>
     <option value="flv">flv</option>
+    <option value="mov">mov</option>
 </select>
 <input type="button" id="btnConvert" value="Convert" />
+<div id="file-convert-result" class="default" ></div>
 </body>
 <script>
     // You can also require other files to run in this process
